# gemini_docs_mcp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
docs/: index.json
docs/autogen/: autogen_full_docs.txt
docs/crawl4ai/: llms.txt
docs/pydantic_ai/: llms.txt
docs/tauri2.0/: llms.txt
docs/test/: example.txt
scripts/: upload_doc.py
src/gemini_docs_mcp/: __init__.py  admin.html  agent.py  docs.py  server.py
